--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -9,10 +9,15 @@
           font-size: 45px; ">
         Sports <strong> Betting Software </strong>
       </h1><p>
-        We offer a bespoke Sports Betting software solution that includes Odds Trading and Tools. This solution is meticulously tailored to meet the unique demands and preferences of our customers, providing a comprehensive Sportsbook Platform.
+        Are you ready to take your sports betting endeavors to the next level? Look no further than VRNL's sports betting software! In this article, we'll delve deep into the world of sports betting, exploring how VRNL's cutting-edge software can elevate your betting experience. With over two decades of expertise in the industry, VRNL is your trusted partner for sports betting solutions. Join us as we embark on an exciting journey into the realm of sports betting software.
+
+
+
       </p>
-<p> Our team of specialists will collaborate closely with you, gaining a deep understanding of your specific requirements and the market dynamics. We will guide you through every stage of the development process, ensuring a customized and reliable solution that aligns perfectly with your goals and the needs of your target market.
+<p> VRNL's Sports Betting Software offers a world of possibilities for sports enthusiasts and bettors. With a focus on providing accurate, relevant, and helpful information, VRNL combines subject-matter expertise and personal experiences to create a comprehensive betting solution. Trust VRNL to elevate your sports betting experience to new heights.
 </p>
+<p>
+  Explore VRNL's sports betting software today and elevate your betting game to the next level!</p>
 <h3>Try our B2B Betting software</h3>
       <div class="sportsbetting-section1-col1-link">
         <a href="https://www.betskyexch.com/" target="_blank" style="font-size: 16px"
@@ -47,11 +52,11 @@
       </p>
 <ul class="bet_page_list">
         <li>
-          <strong> Comprehensive Sports Coverage</strong> We provide coverage of all sports, leagues, and betting markets, offering a wide selection of options, including  <strong>150.000 pre-match </strong> and
-          <strong>75.000 in-play </strong>  opportunities every month.
+          <strong> Real-Time Odds</strong> Stay updated with real-time odds that give you the competitive edge. VRNL's software ensures you never miss out on the best opportunities.
         </li>
 <li>
-          <strong> Automated trading tools </strong> includes automated trading tools that empower you to manage various aspects such as profit margins, suspensions, odds ladders, and more, giving you greater control.
+          <strong> Mobile Compatibility
+          </strong> Bet on the go with VRNL's mobile-compatible software. Whether you use iOS or Android, the platform adapts to your device for a seamless experience.
         </li>
 <li>
           <strong> Advanced Odds Service</strong> redefines sports data APIs. It offers 100% accurate pre-match odds and the fastest live data odds feeds with minimal latency.</li>
@@ -73,7 +78,7 @@
         Starting an online betting platform can indeed be challenging. 
       </p><p>
         That's why we've designed a
-        <strong>comprehensive sports betting software </strong> environment to make the process smoother, complete with top-notch odds providers to offer you the broadest coverage, We encompass 60 different sports, with a monthly lineup of 150,000 pre-match events and 75,000 in-play events. Additionally, we provide real-time data for 2,000 e-sports markets.
+        <strong>comprehensive sports betting software </strong> environment to make the process smoother, complete with top-notch odds providers to offer you the broadest coverage.
       </p><p>
         Our regulated partners receive full support for their entry into the online betting industry, along with the option of Branded or Non-Branded versions of our platforms.
       </p><p>
@@ -124,22 +129,18 @@
     <div class="sportsbetting-crypto-sports-col2">
       <h2>B2C sports betting software</h2>
       <p>
-        B2C (Business-to-Consumer) sports betting software refers to the
-        technology and platform used by sportsbook operators to offer sports
-        betting services directly to end-users .<br />
+        VRNL is your premier destination for B2C sports betting software solutions. We are a trusted name in the industry, dedicated to delivering cutting-edge software that enhances your sports betting experience. Whether you're a seasoned bettor or a newcomer to the world of sports wagering, we've got the tools you need to elevate your game. Try VRNL's sports betting software today and elevate your betting game to the next level!
+      </p>
+      <p>
+        B2C (business-to-consumer) sports betting software refers to the technology and platform used by sportsbook operators to offer sports betting services directly to end-users.<br />
       </p><p>
-        This type of software enables consumers to place bets on various sports
-        events through web or mobile applications. Here are some key features
-        and components typically found in B2C sports betting software:
+        This type of software enables consumers to place bets on various sports events through web or mobile applications. Here are some key features and components typically found in B2C sports betting software:
       </p><ul> <li>
           <b>User Registration and Account Management:</b> Allows users to
           create accounts, manage personal information, and track betting
           history.
         </li>
-        <li>
-          <b>Payment Integration:</b> Supports various payment methods for
-          depositing and withdrawing funds securely.
-        </li>
+        
         <li>
           <b>Customer Support:</b> Provides customer support options, such as
           live chat, email, and phone support, to assist users with inquiries
