--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -3,8 +3,9 @@
     <div class="esports-betting-main">
         <div class="esports-betting-col1">
             <h1>eSports Betting Software</h1>
-            <p>Our gaming platform features eSports betting software, enabling your users to wager on top eSports games. They can even enjoy Live Twitch streams alongside the betting action.</p>
-            <p style="padding-top: 2.25em;">The eSports phenomenon has gained extensive popularity in the United States and is currently experiencing remarkable growth in the Latin American market.</p>
+            <p>At VRNL, we take pride in providing eSports fans with a unique and immersive experience.
+            </p>
+            <p style="padding-top: 2.25em;">VRNL is your gateway to a world where gaming and betting converge. Our eSports Betting Software is designed for gaming fans like you, providing an exciting, secure, and rewarding experience. Don't miss the chance to be part of the action. Join VRNL today and take your gaming experience to new heights!</p>
 
             <div class="esports-betting-col1-button">
                 <button class="button-design" routerLink="/contact">Start Now</button>
@@ -30,21 +31,23 @@
                 <br>
                 Dota 2
                 <br>
-                League of Legends
+                PUBG
                 <br>
-                FIFA
+                CS2
                 <br>
-                Call of Duty
+                MDL Indonesia
                 <br>
-                King of Glory</p>
+                Starcraft2
+                <br>
+                Challenger cup</p>
                 
                 <p>Furthermore, in addition to the most popular titles, we also offer a wide range of common eSports genres through our feed:</p>
-                <p><strong>Sports Games:</strong> FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League.</p>
-                <p><strong>Multiplayer Online titles like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm.</p>
-                <p><strong>First-Person Shooter FPS:</strong> CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch.</p>
-                <p><strong>Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken.</p>
-                <p><strong>Real-Time Strategy RTS:</strong> StarCraft: Brood War, Warcraft III, StarCraft II.</p>
-                <p><strong>Battle Royale:</strong> PUBG, Fortnite, Apex Legends.</p>
+                <p><strong>Sports Games:</strong>EsportsBattle </p>
+                <p><strong>Multiplayer Online titles like:</strong> Dota 2</p>
+                <p><strong>First-Person Shooter FPS:</strong> CS:GO</p>
+                
+                <p><strong>Real-Time Strategy RTS:</strong> StarCraft II.</p>
+                <p><strong>Battle Royale:</strong> PUBG</p>
                 <p>In summary, our collection of titles and games is vast and continually expanding to keep your users engaged.</p>
         </div>
         <div class="top-esports-col2">
@@ -128,9 +131,10 @@
         <div class="esports-betting-middle-row1">
 
             <div class="esport_bet_center">
-                <h2>If you're contemplating an entry into the realm of Online Gambling, our eSports betting software offers a valuable initial stride.</h2>
-                <p>Leverage our professional services, expertise, and our advanced eSports betting platforms and technology. Our regulated partners receive comprehensive support to venture into the online betting industry and can access Branded/Non-Branded versions of our platforms.</p>
-                <p>Embarking on the establishment of an Online Sportsbook with a primary focus on eSports can present its challenges! This is precisely why we've curated an all-encompassing eSports Betting environment, complete with Pre-match Betting Services, with the goal of providing you with the widest array of eSports options available online.</p>
+                <h2>If you're thinking about starting in online betting, our eSports betting software is a great first step.</h2>
+                <p>Take advantage of our expert services and advanced eSports betting technology. Our regulated partners get full support to enter the online betting industry and can use our customized or generic platforms.</p>
+                <p>
+                    Starting an online sportsbook that mainly focuses on eSports can be tough. That's why we've created a comprehensive eSports betting system with pre-match betting services. Our aim is to offer you the most extensive range of eSports options online.</p>
             </div>
         </div>
         <div class="esports-betting-middle-row2">
