--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -74,7 +74,7 @@
               <div class="sub_menu">
                 <ul>
                   <li>
-                    <a routerLink="/white-label-betting-platform">White label sportsbook</a>
+                    <a routerLink="/white-label-betting-platform">White label exchange</a>
                   </li>
                   <li>
                     <a routerLink="/casino">White label casino</a>
