--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -79,7 +79,7 @@
         <li>Geolocation tools for extracting IP address location information</li>
     </ul>
     <p><strong class="color-grey">But wait, there's more</strong></p>
-    <p class="whites_sol_p2"> <strong>Vrnl's platform is meticulously optimized for exceptional performance</strong> and unwavering stability. We harness cutting-edge technology that operates up to twice as fast as traditional casino platforms. Our extensive experience and insight have given rise to the swiftest and most potent application in existence today.</p>
+    <p class="whites_sol_p2"> <strong>Vrnl's platform is finely tuned for top performance</strong> and stability. We use cutting-edge technology that operates twice as fast as regular casino platforms. Our extensive experience has created the fastest and most potent application today.</p>
         </div>
         <div class="white_csol_col_1">
       <img
@@ -98,7 +98,7 @@
         </div>
         <div class="white_labe_live_col_1">
             <h1 class="white_live_h"> <span>White Label</span>  Casino in numbers</h1>
-           
+           <p class="white_live_p">Discover the limitless possibilities of our VRNL company's White Label Casino solutions. Elevate your iGaming business with our extensive range of casino offerings</p>
 <p class="white_live_p1">The finest selection of leading Live Casino providers worldwide</p>
 <p class="white_live_p">An unparalleled variety of live tables available online, featuring multi-channel delivery.</p>
 <ul class="white_live_list">
