--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -5,12 +5,12 @@
 <section class="white_casino_sec">
     <div class="white_casino_row whites_label">
         <div class="white_casino_col">
-    <h1 class="white_c_header"><span>Online</span> Casino platform</h1>
+    <h1 class="white_c_header"><span>Online </span> casino platform</h1>
     <!-- "VRNL's Online Casino Platform takes online gaming to the next level. Offering a wide array of games, our platform ensures endless entertainment for players. With our White Label Casino solution, you can launch your own branded casino effortlessly, all backed by our unwavering commitment to safety and security. We provide 24/7 support and seamless integration, allowing you to boost your revenue and join the VRNL revolution in the world of online casino gaming. -->
-    <p class="white_c_param">VRNL's provide a <strong> Online Casino Platform </strong>takes online gaming to the next level.
+    <p class="white_c_param">VRNL's provide a <strong> Online Casino Platform </strong>takes online gaming to the next level. 
     
     </p>  
-    <p class="white_c_param_2">Offering a wide array of games, our platform ensures endless entertainment for players.With our White Label Casino solution, you can launch your own branded casino effortlessly, all backed by our unwavering commitment to safety and security. We provide 24/7 support and seamless integration, allowing you to <strong>boost your revenue and join the VRNL revolution in the world of online casino gaming.</strong></p>
+    <p class="white_c_param_2">Offering a wide array of games, our platform ensures endless entertainment for players. With our White Label Casino solution, you can launch your own branded casino effortlessly, all backed by our unwavering commitment to safety and security. We provide 24/7 support and seamless integration, allowing you to <strong>boost your revenue and join the VRNL revolution in the world of online casino gaming. </strong></p>
     <p></p>
     
     <em class="white_c_param">Before you take the plunge, we invite you to witness its seamless operation in action.</em>
@@ -30,7 +30,7 @@
     <img class="tv_image" src="assets/vrnl crypto tv2 (1).webp" alt="White label casino">
             </div>
             <div class="white_f_col_1">
-    <h1 class="white_c_header">White-label casino <span style="font-weight:100">main  features</span></h1>
+    <h1 class="white_c_header">White-label casino <span style="font-weight:100">main  features </span></h1>
     <p class="white_f_p">We offer an extensive array of tools designed to empower you in the management of our online casino platform. Among these, we've distilled the selection to focus on the most influential and, significantly, the indispensable ones required for thriving in the competitive global arena:</p>
     <ul class="white_f_list">
         <li> <strong class="black-color">The most extensive catalog of online casino games worldwide,</strong> meticulously selected from the industry's top-rated providers
@@ -98,7 +98,7 @@
         </div>
         <div class="white_labe_live_col_1">
             <h1 class="white_live_h"> <span>White Label</span>  Casino in numbers</h1>
-           <p class="white_live_p">Discover the limitless possibilities of our VRNL company's White Label Casino solutions. Elevate your iGaming business with our extensive range of casino offerings</p>
+           <p class="white_live_p">Discover the limitless possibilities of our VRNL company's White Label Casino solutions. Elevate your casino business with our extensive range of casino offerings</p>
 <p class="white_live_p1">The finest selection of leading Live Casino providers worldwide</p>
 <p class="white_live_p">An unparalleled variety of live tables available online, featuring multi-channel delivery.</p>
 <ul class="white_live_list">
