--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -665,7 +665,7 @@ The proper management of a eSports betting platform can make this business highl
                       <div id="collapse100" class="accordion-collapse collapse" aria-labelledby="heading100" data-bs-parent="#accordionExample100">
                         <div class="accordion-body">
                           <p>
-                            A White Label Casino is a turnkey solution that allows entrepreneurs and businesses to launch their own online casino using our software and infrastructure. You can brand it with your own name and design, while we handle the technical and regulatory aspects.
+                            A White Label Casino is a turnkey solution that allows entrepreneurs and businesses to launch their own online casinos using our software and infrastructure. You can brand it with your own name and design, while we handle the technical and regulatory aspects.
                           </p>
                         </div>
                       </div>
