--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -589,7 +589,7 @@ The proper management of a eSports betting platform can make this business highl
             <div class="x-text x-content e255-e81 m73-1s m73-1w m73-20 m73-21 m73-27">
               <p style="text-align: left"></p>
               <div class="wp-faq-schema-wrap wp-faq-schema-">
-                <h2>FAQs about Live Casino</h2>
+                <h2>FAQs about Live Casino Software</h2>
                 <div role="tablist" class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset">
 
                   <div class="accordion" id="accordionExample1">
@@ -597,13 +597,13 @@ The proper management of a eSports betting platform can make this business highl
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingt24">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse24" aria-expanded="true" aria-controls="collapse24">
-                          What is a turnkey casino software?
+                          What is VRNL Casino Software?
                         </button>
                       </h2>
                       <div id="collapse24" class="accordion-collapse collapse" aria-labelledby="heading24" data-bs-parent="#accordionExample1">
                         <div class="accordion-body">
                           <p>
-                            A turnkey casino software is a solution ready to go live, and your players will have the chance to play as in a real casino. Your players will never get bored with more than 150 providers and different games such as live casino, lottery, virtual games, and many others.
+                            VRNL Live Casino Software is a cutting-edge platform that enables online casinos to offer live dealer games to their players. It provides the infrastructure and tools necessary to host real-time, interactive casino experiences.
                           </p>
                         </div>
                       </div>
@@ -612,18 +612,73 @@ The proper management of a eSports betting platform can make this business highl
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading25">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse25" aria-expanded="false" aria-controls="collapse25">
-                          What is a casino white label casino software?
+                          How does VRNL Live Casino Software work?
                         </button>
                       </h2>
                       <div id="collapse25" class="accordion-collapse collapse" aria-labelledby="heading25" data-bs-parent="#accordionExample1">
                         <div class="accordion-body">
                           <p>
-                            A casino software white label solution is the perfect solution for operators who want to work with online casinos. Thanks to its experience, vrnl casino white label will offer certified and secure casino games. vrnl Casino white label allows you to customize the casino based on your favorite language and currency.
+                            VRNL Live Casino Software integrates seamlessly into online casino websites. It connects players with live dealers through high-quality video streaming, enabling them to play popular casino games such as blackjack, roulette, and baccarat in a live and interactive setting.
                           </p>
                         </div>
                       </div>
                     </div>
-
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="heading27">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse27" aria-expanded="false" aria-controls="collapse27">
+                          What are the main features of VRNL Live Casino Software?
+                        </button>
+                      </h2>
+                      <div id="collapse27" class="accordion-collapse collapse" aria-labelledby="heading27" data-bs-parent="#accordionExample1">
+                        <div class="accordion-body">
+                          <p>
+                            VRNL Live Casino Software offers a range of features, including customizable branding, secure payment integration, and a user-friendly interface for both players and operators. alternative
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="heading25">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">
+                          How do I ensure the security and fairness of games using VRNL Live Casino Software?
+                        </button>
+                      </h2>
+                      <div id="collapse28" class="accordion-collapse collapse" aria-labelledby="heading28" data-bs-parent="#accordionExample1">
+                        <div class="accordion-body">
+                          <p>
+                            VRNL Live Casino Software is built with security in mind. It uses certified random number generators (RNGs) to ensure fairness, and we provide tools for fraud prevention and player protection. Additionally, we implement encryption to secure data transfer.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="heading29">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse29" aria-expanded="false" aria-controls="collapse29">
+                          What games can be offered using VRNL Live Casino Software?
+                        </button>
+                      </h2>
+                      <div id="collapse29" class="accordion-collapse collapse" aria-labelledby="heading29" data-bs-parent="#accordionExample1">
+                        <div class="accordion-body">
+                          <p>
+                            You can offer a wide selection of live dealer games, including classics like live blackjack, live roulette, and live baccarat, as well as variations of these games to keep your players engaged.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="heading30">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse30" aria-expanded="false" aria-controls="collapse30">
+                          Can I integrate VRNL Live Casino Software with my existing online casino platform?
+                        </button>
+                      </h2>
+                      <div id="collapse30" class="accordion-collapse collapse" aria-labelledby="heading30" data-bs-parent="#accordionExample1">
+                        <div class="accordion-body">
+                          <p>
+                            Yes, our software is designed for easy integration with existing platforms, making it a seamless addition to your online casino operation.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
