--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -8,8 +8,9 @@
             <h1  style="font-family: 'Raleway', sans-serif;">
                 Live Casino software</h1>
             <p class="index2-col-para1">Our <strong> live Casino platform </strong>  empowers you to activate  <strong> the top live providers</strong>  known for their  <strong> exceptional quality and mathematical integrity.</strong> </p>
+            <p class="index2-col-para1" style="padding: 7px 0px;">We're dedicated to providing you with the ultimate live casino experience. Whether you're a seasoned gamer or new to the world of online casinos, our platform offers an immersive, real-time gaming experience that's second to none. </p>
 
-            <p class="index2-col-para2">Vrnl's Live Casino solution provides a comprehensive suite of services, including:</p>
+            <p class="index2-col-para2">Vrnl's Live Casino solution provides a comprehensive suite of services, including: </p>
             <ul>
                 <li>Full History Reporting Tools</li>
                 <li>Game History Visualization</li>
@@ -67,7 +68,7 @@
 
     <div class="container7-col2">
         <h2 ><strong style="color: #575756;">live casino API</strong> integrations</h2>
-        <p class="container7-col2-content">You can have our live casino software up and running within a matter of days. What's more, we provide comprehensive management services, ensuring that the entire operation is overseen by our experts.<strong style="color: #575756;"> We also guarantee access to the most extensive selection of live games available online.
+        <p class="container7-col2-content">You can have our live casino software up and running within a matter of days. What's more, we provide comprehensive management services, ensuring that the entire operation is overseen by our experts.<strong style="color: #575756;">We also guarantee access to the most extensive selection of live games available online. 
             </strong></p>
 
     
