--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -33,7 +33,7 @@ margin-top: 15%;
 font-size: 50px;
 font-family: 'Raleway', sans-serif;  
 font-weight: 500;
-margin-right: calc(-1.999em * -1);
+/* margin-right: calc(-1.999em * -1); */
 line-height: 1.3;
 letter-spacing: 0.001em;
 color: #575756;
