--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -90,13 +90,13 @@
         <div class="index3-right-text">
             <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino Solutions<br></h1>
             <li><strong>Casino White Label Solution</strong></li>
-            <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly</p>
+            <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly.</p>
             <li><strong> Website Brandingli</strong> </li>
-            <p style="margin-left: 24px;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression</p>
+            <p style="margin-left: 24px;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression.</p>
             <li><strong> Tools (training)</strong></li>
-            <p style="margin-left: 24px;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success</p>
+            <p style="margin-left: 24px;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success.</p>
             <li><strong>Client Support</strong></li>
-            <p style="margin-left: 24px;">enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your clients' needs are met with efficiency and care</p>
+            <p style="margin-left: 24px;">enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your clients' needs are met with efficiency and care.</p>
             
         </div>
     
