--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -74,13 +74,13 @@
  
         <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino Solutions<br></h1>
         <li style="color: #4e4c4c;"><strong>Casino White Label Solution</strong></li>
-        <p style="margin-left: 24px;    font-family: Raleway, sans-serif !important;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly</p>
+        <p style="margin-left: 24px;    font-family: Raleway, sans-serif !important;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly.</p>
         <li style="color: #4e4c4c;" ><strong> Website Brandingli</strong> </li>
-        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression</p>
+        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression.</p>
         <li style="color: #4e4c4c;" ><strong> Tools (training)</strong></li>
-        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success</p>
+        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success..</p>
         <li style="color: #4e4c4c;" ><strong>Client Support</strong></li>
-        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your clients' needs are met with efficiency and care</p>
+        <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your clients' needs are met with efficiency and care.</p>
         
    
     
