--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -5,7 +5,10 @@
            
 <h1>Mobile Sports Betting Software</h1>
 <p>Our <strong>Mobile app</strong> empowers your bettors to effortlessly access their gaming accounts and place bets via tablets, smartphones, and other internet-connected mobile devices.</p>
-        </div>
+<p>From cricket and soccer to tennis, our software covers an extensive range of sporting events worldwide. No matter your sporting passion, you can place bets on the games and teams you love.</p>  
+<p> 
+Our software is not just about placing bets, it's about creating an experience that's both seamless and user-focused. We've invested in the latest technology to ensure that navigating our platform is as easy as possible   </p> 
+</div>
 
         <div class="mobile-sports-right"></div>
             <img class="mobile_images" src="assets/VRNL 211.webp" alt="Mobile sports betting software">
@@ -19,18 +22,15 @@
     <div class="mobile-advantages-main">
         <div class="mobile-advantages-left">
             <h1>Advantages of Mobile Sports Betting Software</h1>
-            <p><strong>Mobile Apps are Faster</strong>
-                <br>
-                Applications outpace mobile websites, offering swifter actions and responses.
-            </p>
-            <p><strong>Personalized Betting Content</strong>
-                <br>
-                Users relish personalized content for a more immersive experience, featuring tailored betting options aligned with their preferences.
-            </p>
-            <p><strong>Instant Online Betting</strong>
-                <br>
-                All mobile apps grant instant access with a simple tap, enabling users to place bets, check their gaming accounts, engage in casino games, and select their favorite leagues without delay.
-            </p>
+            <li><strong>Mobile Apps are Faster</strong></li>
+            <p style="margin-left: 24px;">Applications outpace mobile websites, offering swifter actions and responses.</p>
+            <li><strong>Personalized Betting Content</strong> </li>
+            <p style="margin-left: 24px;"> Users relish personalized content for a more immersive experience, featuring tailored betting options aligned with their preferences.</p>
+            <li><strong>Instant Online Betting</strong></li>
+            <p style="margin-left: 24px;"> All mobile apps grant instant access with a simple tap, enabling users to place bets, check their gaming accounts, engage in casino games, and select their favorite leagues without delay.</p>
+            <li><strong>Secure and Reliable</strong></li>
+            <p style="margin-left: 24px;"> our security is our top priority. VRNL Mobile Sports Betting Software is built with state-of-the-art security measures to protect your personal and financial information. You can bet with peace of mind.</p>
+           
     
 
         </div>
