--- a/src/app/mobile/mobile.component.css
+++ b/src/app/mobile/mobile.component.css
@@ -2047,7 +2047,7 @@ li:hover ul#submenu {
 
 .mobile-advantages-left strong {
   font-style: normal;
-  font-size: 1.7em !important;
+  font-size: 20px !important;
   line-height: 1.4;
   letter-spacing: 0em;
   text-transform: none;
