--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -448,7 +448,7 @@ gap:30px;
 .live_header_1{
     color: #a0c528;
     font-weight: 600;
-    margin-left: 75px;
+    /* margin-left: 75px; */
     font-size: 35px;
     margin-bottom: 30px;
 }
