--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -78,7 +78,7 @@
             Platform</a></p>
       </div>
       <div>
-        <p class="comp_list"><a routerLink="/sportsbook-iframe" aria-label="Sportsbook iFrame">Sportsbook iFrame</a></p>
+        <p class="comp_list"><a routerLink="/sportsbook-iframe" aria-label="Sportsbook iFrame">Exchangebook iframe</a></p>
       </div>
     </div>
   </div>
