--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -2,9 +2,10 @@
 <section class="sport_iframe_sec">
     <div class="sports_ifram_row">
       <div class="sports_if_col">
-        <h1 class="sports_header">Sportsbook iFrame</h1>
+        <h1 class="sports_header">Exchangebook iframe
+        </h1>
         <p class="sports_para">
-          The Sportsbook iFrame offers the capability to activate the sportsbook module within a matter of days through API integration. Additionally, our fully managed Sportsbook service ensures the broadest programming of online events and markets, all overseen by us.
+          The Exchangebook iframe provides a quick and efficient way to activate the Exchangebook module in just a matter of days through seamless API integration. Furthermore, our comprehensive Exchangebook service, under our expert supervision, guarantees a wide range of programming for online events and markets.
       </p>
 
         <button class="button_slide slide_right" routerLink="/contact">
@@ -25,9 +26,9 @@
     <div class="sports_type_row">
       
       <div class="sports_col_1">
-        <h1 class="types_header">Types of sportsbook iframe</h1>
+        <h1 class="types_header">Types of Exchangebook iframe</h1>
         <p class="type_para">
-          Our Sportsbook iFrame solutions come in three variants, each tailored to the channel used, ensuring the most suitable option for your needs:</p>
+          Our Exchangebook iframe solutions come in three variants, each tailored to the channel used, ensuring the most suitable option for your needs:</p>
       <ul class="types_list">
           <li>
               iFrame for <strong>Desktop</strong>, designed for computers with varying resolutions and featuring diverse and customizable layouts.
@@ -63,9 +64,9 @@
       </div>
     
       <div class="sports_col_iframe">
-        <h1 class="types_header">Comprehensive Managed Sportsbook</h1>
+        <h1 class="types_header">Comprehensive Managed Exchangebook</h1>
         <p class="type_para">
-            Our Sportsbook iFrame encompasses the supply of odds data feeds and the configuration of core betting settings. The software comes equipped with an array of features and tools for independent management of odds margins and configurations. However, if your primary focus is on player management and marketing, we offer fully managed trading services and support.
+            Our Exchangebook iframe encompasses the supply of odds data feeds and the configuration of core betting settings. The software comes equipped with an array of features and tools for independent management of odds margins and configurations. However, if your primary focus is on player management and marketing, we offer fully managed trading services and support.
         </p>
 
         <br />
@@ -81,7 +82,7 @@
  
   <div class="sport_sol_col_1">
    
-<h1 class="header_iframes">Acquiring the Sportsbook iFrame Solution Is Effortless</h1>
+<h1 class="header_iframes">Acquiring the Exchangebook iframe Solution Is Effortless</h1>
 <p class="gaming_para_iframe">
     We've streamlined the process for activating the iFrame, encompassing just five simple steps:
 </p>
@@ -90,10 +91,10 @@
         Formalize the agreement between Vrnl and the customer.
     </li>
     <li>
-        Initiate the sportsbook iFrame integration via APIs using our SDK.
+        Initiate the Exchangebook iFrame integration via APIs using our SDK.
     </li>
     <li>
-        Conduct a meeting to define the sportsbook strategy to pursue.
+        Conduct a meeting to define the Exchangebook strategy to pursue.
     </li>
     <li>
         Identify the most engaging sports and events tailored to your operating area.
