--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -2,9 +2,9 @@
 <section class="first-sec">
 
     <div class="first-head">
-        <h1>Online Sportsbook Software</h1>
+        <h1>Online Exchange Software</h1>
         <div class="home">
-            <a href="/index.html">Home</a> <span class="dash">-</span> <span class="lil-para">Online Sportsbook Software</span>
+            <a href="/index.html">Home</a> <span class="dash">-</span> <span class="lil-para">Online Exchange Software</span>
 
         </div>
     </div>
@@ -16,9 +16,14 @@
 <section class="sport_book_sec">
 <div class="sports_row_1">
     <div class="sports_book_col">
-<h2 class="sports_book_h1">Online sportsbook software
+<h2 class="sports_book_h1">Online Exchange software
 </h2>
-<p class="sports_param">We provide you with a fully functional online sportsbook software, complete with an extensive selection of live matches offered on a monthly basis. Additionally, our live streaming options will transform your bookie into an entertainment platform, all backed by independent gaming laboratories' certifications for added assurance.</p>
+<p class="sports_param">At VRNL, we take pride in delivering state-of-the-art online Exchange software that redefines the betting experience. We offer a fully functional platform equipped with an extensive selection of live matches available on a monthly basis. With our live streaming options, we'll transform your bookie into an entertainment platform, all backed by certifications from independent gaming laboratories for added assurance.
+
+</p>
+<p class="sports_param">
+  VRNL's Online Exchange Software offers a comprehensive range of sports betting options. Whether you're a fan of cricket, soccer, tennis, or any other sport, we've got you covered. Our platform provides real-time odds, in-play betting, and a user-friendly interface that makes placing bets a breeze.
+</p>
 
 
 <div class="onther_param">
@@ -43,28 +48,37 @@
 <section class="main_feature">
 <div class="fearues_row">
 <div class="features_col">
-<img class="features of Online sportsbook software" src="assets/web3_sports.jpg.webp" alt="Online sportsbook software">
+<img class="features of Online sportsbook software" src="assets/web3_sports.jpg.webp" alt="Online Exchange software">
 </div>
 <div class="features_col_1">
- <h1 class="feature_header"><span>Online sportsbook software</span><strong> Main features</strong></h1> 
+ <h1 class="feature_header"><span>Online Exchange software</span><strong> Main features</strong></h1> 
  <p class="feature_para">Vrnl is at the forefront of revolutionizing betting and online casino management. With our expertise, you gain access to:</p>  
  <ul class="feature_list">
-    <li>A comprehensive array of sports, leagues, and betting markets worldwide.
+    <li><strong>A Global Betting Experience : </strong>
+      VRNL provides access to a comprehensive array of sports, leagues, and betting markets from around the world. With us, you can offer your users a truly global betting experience.
+
+
     </li>
-    <li>A vast selection of 150,000 monthly pre-match options.
+    <li><strong>Extensive Pre-Match Options : </strong> 
+      Choose from a vast selection of 150,000 monthly pre-match betting options. We ensure that your platform is stocked with a wide variety of choices to cater to diverse betting preferences.    </li>
+    
+    <li><strong>Thrilling In-Play Opportunities : </strong> 
+      Engage your users with 75,000 monthly in-play opportunities. These real-time betting options add excitement and spontaneity to the betting experience.
+
     </li>
-    <li>75,000 monthly in-play opportunities.
+    <li><strong>Casino Games for the Metaverse : 
+    </strong>
+    VRNL offers an extensive collection of casino games suitable for the metaverse. Immerse your users in a virtual casino environment with our diverse gaming options.
     </li>
-    <li>An extensive collection of casino games suitable for the metaverse.
+
+    <li><strong>Seamless iFrame Integration : </strong>
+      Easily integrate our iFrame into your iGaming platform. Our user-friendly iFrame solution allows you to enhance your platform's capabilities effortlessly.
     </li>
-    <li>Seamlessly integrate our iframe into your iGaming platform.
+
+    <li><strong>Flexible Integration : </strong>
+      Choose your integration method, whether it's through API or iFrame. We provide versatile options to suit your convenience and platform requirements.
     </li>
-    <li>Utilize automated trading tools, providing control over margins, suspensions, odds ladders, and more.</li>
-    <li>Take advantage of bonus tools and a campaign builder for effective promotions.
-    </li>
-    <li>Access a wide range of marketing tools.
-    </li>
-    <p>Integration options available via API or iFrame for your convenience.</p>
+
  </ul>
 </div>
 </div>
@@ -73,7 +87,7 @@
 
 <section class="sportsbook_sec_page">
 <div class="sports_container_1">
-  <h2 class="sports_header_2">Online sportsbook software iGaming Casino Platform
+  <h2 class="sports_header_2">Online Exchange software iGaming Casino Platform
   </h2>
   <div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
